[package]
name = "udp_hp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full", "rt-multi-thread"] }
lazy_static = "1.5.0"
dashmap = "6.1.0"
env_logger = "0.11.8"
log = "0.4.29"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
